--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,34 @@
+/* UNIVERSAL STYLE */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* BODY STYLE */
 body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* BEGIN HEADER STYLE */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+/* Nav Element Style */
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +36,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -45,11 +49,13 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+/* END HEADER STYLE */
 
 p {
     font-size: 16px;
 }
 
+/* BEGIN HERO STYLE */
 .hero {
     height: 800px;
     width: 100%;
@@ -74,7 +80,9 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+/* END HERO STYLE */
 
+/* BEGIN BENEFITS STYLE */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -133,7 +141,9 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* END BENEFITS STYLE */
 
+/* BEGIN CONTENT STYLE */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -187,14 +197,17 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/* END CONTENT STYLE */
 
-.footer {
+/* BEGIN FOOTER STYLE */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
+/* END FOOTER STYLE */
